# AcmeFetch

./: .gitignore  .travis.yml  AUTHORS  CHANGES  CNAME  COPYRIGHT  Makefile.am  Makefile.in  PERL_MODULES  README  README.md  configure  configure.ac  cpanfile  index.html
assets/css/: style.css
doc/: acmefetch.pod
etc/: Makefile.am  Makefile.in  acmefetch.cfg.dist
man/: acmefetch.1
